tests/baselines/reference/getAndSetNotIdenticalType2.errors.txt
tests/cases/compiler/getAndSetNotIdenticalType2.ts(5,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(5,9): error TS2380: 'get' and 'set' accessor must have the same type.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(8,9): error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(8,9): error TS2380: 'get' and 'set' accessor must have the same type.
tests/cases/compiler/getAndSetNotIdenticalType2.ts(9,9): error TS2322: Type 'A<string>' is not assignable to type 'A<T>'.
  Type 'string' is not assignable to type 'T'.
    'string' is assignable to the constraint of type 'T', but 'T' could be instantiated with a different subtype of constraint '{}'.


==== tests/cases/compiler/getAndSetNotIdenticalType2.ts (5 errors) ====
    class A<T> { foo: T; }
    
    class C<T> {
        data: A<T>;
        get x(): A<T> {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type.
            return this.data;
        }
        set x(v: A<string>) {
            ~
!!! error TS1056: Accessors are only available when targeting ECMAScript 5 and higher.
            ~
!!! error TS2380: 'get' and 'set' accessor must have the same type.
            this.data = v;
            ~~~~~~~~~
!!! error TS2322: Type '{|A|0|}<string>' is not assignable to type '{|A|1|}<{|T|2|}>'.
!!! error TS2322:   Type 'string' is not assignable to type '{|T|3|}'.
!!! error TS2322:     'string' is assignable to the constraint of type '{|T|4|}', but '{|T|5|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/compiler/getAndSetNotIdenticalType2.ts:1:7
!!! annotated symbol 1 tests/cases/compiler/getAndSetNotIdenticalType2.ts:1:7
!!! annotated symbol 2 tests/cases/compiler/getAndSetNotIdenticalType2.ts:3:9
!!! annotated symbol 3 tests/cases/compiler/getAndSetNotIdenticalType2.ts:3:9
!!! annotated symbol 4 tests/cases/compiler/getAndSetNotIdenticalType2.ts:3:9
!!! annotated symbol 5 tests/cases/compiler/getAndSetNotIdenticalType2.ts:3:9
        }
    }
    
    var x = new C();
    var r = x.x;
    x.x = r;